# ledge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PROJECT.md  RULES.md  SKILL.md
infra/: Dockerfile  docker-compose.yml
src/ledge/: config.py  main.py
src/ledge/core/: context.py  engine.py
tests/: test_cli_new.py  test_config.py  test_context.py  test_engine.py
